--- a/CSS/box.html
+++ b/CSS/box.html
@@ -23,7 +23,7 @@
         }
 
         .box2{
-            color: brown;
+            color: rgb(152, 54, 54);
             padding: 50px;
             margin: 10px;
             border: 3px solid  blue ;
